--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -3,3 +3,6 @@
 
 @import 'custom';
 @import 'components/navbar';
+@import 'config/animations';
+@import 'config/variables';
+@import 'components/flash';
