Add Actiontext and Activestorage

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -44,11 +44,7 @@ h2 {
 }
 
 .home-callout > h1 > span {
-    font-family: monospace;
-}
-
-.main-profile-section {
-    margin: 3rem 0;
+    font-family: monospace !important;
 }
 
 .pagination {
