--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -5,4 +5,4 @@
 @import 'components/navbar';
 @import 'config/animations';
 @import 'config/variables';
-@import 'components/flash';
+@import 'components/flash';@import 'actiontext.css';
