--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -24,7 +24,7 @@ footer {
 p {
     // line-height: 1.4;
     font-family: 'Open Sans', sans-serif;
-    font-size: 17px !important;
+    font-size: 18px !important;
 }
 
 // .text-block {
@@ -111,4 +111,8 @@ a {
 
 .trix-content {
     line-height: 1.7;
+}
+
+a.btn {
+    text-decoration: none;
 }
