--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,11 +8,11 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto">
         <%= link_to "Home", root_path, class: "nav-link text-dark me-2" %>
 
-        <%= link_to "Projects", '/', class: "nav-link text-dark me-2" %>
+        <%= link_to "Projects", projects_path, class: "nav-link text-dark me-2" %>
 
         <%= link_to "Resume", '#', class: "nav-link text-dark me-2" %>
 
-        <%= link_to "Contact", '#', class: "nav-link text-dark" %>
+        <%= link_to "Contact", root_path+'#contact', class: "nav-link text-dark" %>
 
       </ul>
 
