--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <div id="main-wrapper">
       <%= render 'layouts/navbar' %>
 
+      <%= render 'layouts/mobile_nav_list' %>
+
       <div id="flash" class="flash">
         <%= render "layouts/flash" %>
       </div>
