--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -38,7 +38,7 @@
                 <% if @project.image.attached? %>
                     <%= image_tag @project.image, class: "img-fluid" %>
                 <% else %>
-                    <%= image_tag 'default-webpage.jpg', class: "img-fluid" %>
+                    <%= image_tag 'default-image.jpg', class: "img-fluid" %>
                 <% end %>
             </div>
             <span>
