Add cssbundling and jsbundling gems to remove application.css not found error in production

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <div id="main-wrapper">
       <%= render 'layouts/navbar' %>
 
-      <%= render 'layouts/mobile_nav_list' %>
+      <%#= render 'layouts/mobile_nav_list' %>
 
       <div id="flash" class="flash">
         <%= render "layouts/flash" %>
