Disable sign up

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -37,7 +37,7 @@
         <% else %>
             <ul class="navbar-nav">
                 <%= link_to "Log in", new_user_session_path, class: "nav-link text-dark mr-1" %>
-                <%= link_to "Sign up", new_user_registration_path, class: "nav-link text-dark ml-1" %>
+                <%#= link_to "Sign up", new_user_registration_path, class: "nav-link text-dark ml-1" %>
             </ul>
         <% end %>
     </div>
