--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -47,5 +47,8 @@
             </span>
         </div>
         <p><%= @project.description %></p>
+        <div class="text-center">
+            <%= link_to 'Contact me', '#contact', class: "text-decoration-none btn btn-outline me-2 rounded btn-lg" %>
+        </div>
     </div>
 </div>
