--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
         <section class="row align-items-center main-profile-section pb-5">
             <div class="home-callout">
                 <header class="home-headings mb-5">
-                    <h1 class="mb-3">Hi there &#128512;! I am Tolase, </h1>
+                    <h1 class="mb-3">Hi there &#128512;! I am Tolase Kelvin, </h1>
                     <h1>a <span class="main-job-role bg-dark text-light" style='font-family: monospace;'>- Ruby on Rails Developer -</span></h1>
                 </header>
                 <p>I sincerely appreciate you stopping by my website. It has great meaning for me.</p>
