Fix actiontext styling and upload assets to was

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -11,4 +11,4 @@
 @import 'config/animations';
 @import 'config/variables';
 @import 'components/flash';
-@import 'actiontext.css';
+@import 'actiontext';
