--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,7 +14,7 @@
                 <p class="w-75 mb-3">Please <%= mail_to 'tolasekelvin@gmail.com', 'get in touch' %> if you or anyone you know is hiring and you believe I am someone worth trying. It would be really valued.</p>
             </div>
             <div class="wrapper-contact mt-3">
-                <%= link_to 'Contact me', '#contact', class: "text-decoration-none btn btn-outline me-2 rounded btn-lg" %>
+                <%= mail_to 'tolasekelvin@gmail.com', 'Contact me', class: "text-decoration-none btn btn-outline me-2 rounded btn-lg" %>
                 <%= link_to "Projects", projects_path, class: "text-decoration-none btn btn-colour-1 rounded btn-lg" %>
             </div>
         </section>  
