--- a/app/views/layouts/_mobile_nav_list.html.erb
+++ b/app/views/layouts/_mobile_nav_list.html.erb
@@ -6,7 +6,7 @@
     <%= link_to 'Projects', projects_path, class: 'nav-link text-info' %>
   </li>
   <li class="nav-item">
-    <%= link_to 'Resume', '/', class: 'nav-link text-info' %>
+    <%#= link_to 'Resume', '/', class: 'nav-link text-info' %>
   </li>
   <li class="nav-item">
     <%= link_to 'Contact', root_path+'#contact', class: 'nav-link text-info' %>
