--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
 
         <%= link_to "Projects", projects_path, class: "nav-link text-dark me-2" %>
 
-        <%= link_to "Resume", '#', class: "nav-link text-dark me-2" %>
+        <%#= link_to "Resume", '#', class: "nav-link text-dark me-2" %>
 
         <%= link_to "Contact", root_path+'#contact', class: "nav-link text-dark" %>
 
