--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Tags") %>
 
 <div class="container py-5 text-center">
-  <%= link_to "New tag", new_tag_path, class: "btn btn-dark  mb-3" %>
+  <%= link_to "New tag", new_tag_path, class: "btn btn-dark  mb-3" if current_user && current_user.admin %>
   <div class="project-copy">
       <h1 class="pb-3">Tags</h1>
       <% @tags.each do |tag| %>
