Edit homepage and added target attribute to footer link

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,12 +5,12 @@
             <div class="home-callout">
                 <header class="home-headings mb-5">
                     <h1 class="mb-3">Hi there &#128512;! I am Tolase Kelvin, </h1>
-                    <h1>a <span class="main-job-role bg-dark text-light" style='font-family: monospace;'>- Web Developer (Ruby on Rails) -</span></h1>
+                    <h1>a <span class="main-job-role bg-dark text-light" style='font-family: monospace;'>- Web Developer  -</span></h1>
                 </header>
                 <p>I sincerely appreciate you stopping by my website. It has great meaning for me.</p>
                 <p>I am Tolase, yet again. I adore using Ruby on Rails to create web applications. I consider myself to be a creative person that has a passion for coding. I love to hear other people's perspectives and draw inspiration from a variety of sources. My ability to solve difficulties has often assisted me in identifying the root of issues and creating workable solutions.</p>
-                <p>As of right now, I have no professional experience. On the other hand, you can look at my side projects in the section below. <strong>I am proficient in the following technologies: Command Line, HTML, CSS and Layouts, Bootstrap, Git, Ruby, Ruby on Rails, Minitest, Rspec, AWS S3</strong></p>
-                <p class="w-75 mb-3">Please <%= mail_to 'tolasekelvin@gmail.com', 'get in touch' %> if you or anyone you know is hiring and you believe I am someone worth trying. It would be really valued.</p>
+                <p>As of right now, I have no professional experience. On the other hand, you can look at my side projects in the section below. <strong>I am proficient in the following technologies: Command Line, HTML, CSS and Layouts, Bootstrap, Tailwind, Git, Ruby, Ruby on Rails, Minitest, Rspec, AWS S3</strong></p>
+                <p class="w-75 mb-3">Please <%= mail_to 'tolasekelvin@gmail.com', 'get in touch' %> if you or anyone you know is hiring. It would be valued.</p>
             </div>
             <div class="wrapper-contact mt-3">
                 <%= mail_to 'tolasekelvin@gmail.com', 'Contact me', class: "text-decoration-none btn btn-outline me-2 rounded btn-lg" %>
