--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
-<footer class="footer text-center border-top m-0 py-3">
+<footer class="footer text-center border-top">
     <p class="footer-text mb-0">
         <%= link_to 'https://github.com/tolaseadegbite', class:"text-dark text-decoration-none", target: "_blank" do %>
             Github
             <i class="bi bi-github fs-4"></i>
         <% end %>
     </p>
-    <p class="footer-text mb-2"><span class="fw-bold">Tolase</span> &copy; <%= Time.current.year %></p>
+    <p class="footer-text m-0"><span class="fw-bold">Tolase</span> &copy; <%= Time.current.year %></p>
 </footer>
