--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,5 +1,5 @@
 <div class="col-sm-12 col-md-6 col-lg-4 mt-3">
-    <div class="project-card rounded pb-3 h-100">
+    <div class="project-card rounded pb-3 h-100 shadow">
         <div class="project-img mb-3">
             <% if project.image.attached? %>
                 <%= link_to project do %>
