--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,11 +5,10 @@
             <div class="home-callout">
                 <header class="home-headings mb-5">
                     <h1 class="mb-3">Hi there &#128512;! I am Tolase Kelvin, </h1>
-                    <h1>a <span class="main-job-role bg-dark text-light" style='font-family: monospace;'>- Web Developer  -</span></h1>
+                    <h1>a <span class="main-job-role bg-dark text-light" style='font-family: monospace;'>- Designer, Developer  -</span></h1>
                 </header>
                 <p>I sincerely appreciate you stopping by my website. It has great meaning for me.</p>
-                <p>I am Tolase, yet again. I adore using Ruby on Rails to create web applications. I consider myself to be a creative person that has a passion for coding. I love to hear other people's perspectives and draw inspiration from a variety of sources. My ability to solve difficulties has often assisted me in identifying the root of issues and creating workable solutions.</p>
-                <p>As of right now, I have no professional experience. On the other hand, you can look at my side projects in the section below. <strong>I am proficient in the following technologies: Command Line, HTML, CSS and Layouts, Bootstrap, Tailwind, Git, Ruby, Ruby on Rails, Minitest, Rspec, AWS S3</strong></p>
+                <p>I am a highly motivated and detail-oriented web developer with a strong foundation in computer science and a passion for building innovative solutions. Proficient in Ruby on Rails, with experience in full-stack custom development, DevOps, and agile methodologies. I also specialize in empowering small businesses to establish a strong online presence by crafting customized websites using WordPress. Whether it's a brand showcase or a fully functional e-commerce platform, I help clients bring their vision to life with tailored solutions that meet their unique needs and goals.</p>
                 <p class="w-75 mb-3">Please <%= mail_to 'tolasekelvin@gmail.com', 'get in touch' %> if you or anyone you know is hiring. It would be valued.</p>
             </div>
             <div class="wrapper-contact mt-3">
